Updates to docker
- Copy the shared library when installing the python library. This didn't
seem to be necessary yesterday, so I have to look more into it.
- Add more examples to notebook.

TODO: Fix the horrendous memory leaks when passing pixels to python.

--- a/python/Examples/Basics.ipynb
+++ b/python/Examples/Basics.ipynb
@@ -5,9 +5,7 @@
    "id": "prerequisite-kinase",
    "metadata": {},
    "source": [
-    "# This notebook walks through the basics of using TASM.\n",
-    "\n",
-    "It uses a (relatively uninteresting) video of a bird with pre-computed object detections."
+    "# This notebook walks through the basics of using TASM."
    ]
   },
   {
@@ -16,6 +14,24 @@
    "metadata": {},
    "source": [
     "## Setup: loading a video and detections."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "administrative-peeing",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove previously-stored videos, data.\n",
+    "# TODO: Switch to in-memory db.\n",
+    "import os\n",
+    "import shutil\n",
+    "\n",
+    "if os.path.exists('resources'):\n",
+    "    shutil.rmtree('resources')\n",
+    "if os.path.exists('labels.db'):\n",
+    "    os.remove('labels.db')"
    ]
   },
   {
@@ -102,6 +118,59 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bronze-mason",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import tasm\n",
+    "\n",
+    "t = tasm.TASM()\n",
+    "\n",
+    "# First, load the video without tiling into TASM.\n",
+    "untiled_video_name = 'birds-untiled'\n",
+    "t.store(VIDEO_PATH, untiled_video_name)\n",
+    "\n",
+    "# We can also store it with a uniform layout, e.g. 2x2.\n",
+    "rows = 2\n",
+    "cols = 2\n",
+    "t.store_with_uniform_layout(VIDEO_PATH, 'birds-2x2', rows, cols)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "atlantic-departure",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add metadata about the video. \n",
+    "# We could use t.add_metadata(video, label, frame, x1, y1, x2, y2).\n",
+    "# However, since we have all of the metadata available, we can use t.add_bulk_metadata to add all of it at once.\n",
+    "metadata_id = 'birds'\n",
+    "label = 'bird'\n",
+    "metadata_info = [\n",
+    "    tasm.MetadataInfo(metadata_id, r.label, r.frame, r.x1, r.y1, r.x2, r.y2) \n",
+    "    for _, r in detections.iterrows()\n",
+    "]\n",
+    "t.add_bulk_metadata(metadata_info)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "selected-dollar",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Now, we can use the metadata to tile around birds.\n",
+    "tiled_video_name = 'birds-birds'\n",
+    "t.store_with_nonuniform_layout(VIDEO_PATH, tiled_video_name, metadata_id, label)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "buried-jefferson",
    "metadata": {},
@@ -112,10 +181,82 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "exterior-source",
+   "id": "raised-paper",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# First, let's retrieve a few birds from the un-tiled video.\n",
+    "first_frame_inclusive = 0\n",
+    "last_frame_exclusive = 5\n",
+    "untiled_selection = t.select(untiled_video_name, metadata_id, label, first_frame_inclusive, last_frame_exclusive)\n",
+    "\n",
+    "# Inspect the returned instances.\n",
+    "num_birds = 0\n",
+    "while True:\n",
+    "    bird = untiled_selection.next()\n",
+    "    if bird.is_empty():\n",
+    "        break\n",
+    "    w = bird.width()\n",
+    "    h = bird.height()\n",
+    "    num_birds += 1\n",
+    "    plt.axis('off')\n",
+    "    plt.imshow(bird.numpy_array()); plt.show()\n",
+    "print(f'Detected {num_birds} birds.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "committed-mediterranean",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Compare the time to retrieve all of the birds from the untiled video from the tiled video.\n",
+    "# By not specifying first frame and last frame, TASM selects all instances of the object from the video.\n",
+    "import time\n",
+    "\n",
+    "start = time.perf_counter()\n",
+    "untiled_selection = t.select(untiled_video_name, metadata_id, label)\n",
+    "num_birds = 0\n",
+    "while True:\n",
+    "    bird = untiled_selection.next()\n",
+    "    if bird.is_empty():\n",
+    "        break\n",
+    "    num_birds += 1\n",
+    "end = time.perf_counter()\n",
+    "print(f'Retrieved {num_birds} birds in {end - start}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "coupled-explosion",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "start = time.perf_counter()\n",
+    "tiled_selection = t.select(tiled_video_name, metadata_id, label)\n",
+    "num_birds = 0\n",
+    "while True:\n",
+    "    bird = tiled_selection.next()\n",
+    "    if bird.is_empty():\n",
+    "        break\n",
+    "    num_birds += 1\n",
+    "end = time.perf_counter()\n",
+    "print(f'Retrieved {num_birds} birds in {end - start}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "sitting-officer",
+   "metadata": {},
+   "source": [
+    "## Automatically tiling a video."
+   ]
   }
  ],
  "metadata": {
