Update notebook with incremental tiling example

--- a/python/Examples/Basics.ipynb
+++ b/python/Examples/Basics.ipynb
@@ -5,7 +5,13 @@
    "id": "prerequisite-kinase",
    "metadata": {},
    "source": [
-    "# This notebook walks through the basics of using TASM."
+    "# This notebook walks through the basics of using TASM\n",
+    "It covers\n",
+    "- Loading metadata\n",
+    "- Loading videos and storing them with and without tiles\n",
+    "- Retrieving objects\n",
+    "- (coming) Retrieving full frames\n",
+    "- Automatically tiling videos as queries execute"
    ]
   },
   {
@@ -24,7 +30,6 @@
    "outputs": [],
    "source": [
     "# Remove previously-stored videos, data.\n",
-    "# TODO: Switch to in-memory db.\n",
     "import os\n",
     "import shutil\n",
     "\n",
@@ -72,14 +77,17 @@
    "id": "passing-kitty",
    "metadata": {},
    "source": [
-    "### View detections on a few frames."
+    "### View detections on a few frames.\n",
+    "Is it the most exciting video? No. But at one point I thought it was exciting enough to capture, so here we are."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "dramatic-bolivia",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "import cv2\n",
@@ -95,6 +103,8 @@
     "num_frames = 5\n",
     "vc = cv2.VideoCapture(VIDEO_PATH)\n",
     "\n",
+    "f, axs = plt.subplots(1, num_frames, figsize=(15, 15))\n",
+    "[ax.axis('off') for ax in axs.ravel()]\n",
     "for f in range(num_frames):\n",
     "    ret, frame = vc.read()\n",
     "    if not ret:\n",
@@ -103,10 +113,8 @@
     "    objects = detections[detections.frame == f]\n",
     "    for i, row in objects.iterrows():\n",
     "        frame = draw_box(frame, row.label, row.x1, row.y1, row.x2, row.y2)\n",
-    "    \n",
-    "    plt.figure(figsize=(10, 10))\n",
-    "    plt.axis('off')\n",
-    "    plt.imshow(frame); plt.show()"
+    "\n",
+    "    axs[f].imshow(frame)"
    ]
   },
   {
@@ -190,20 +198,46 @@
     "# First, let's retrieve a few birds from the un-tiled video.\n",
     "first_frame_inclusive = 0\n",
     "last_frame_exclusive = 5\n",
-    "untiled_selection = t.select(untiled_video_name, metadata_id, label, first_frame_inclusive, last_frame_exclusive)\n",
+    "tiled_selection = t.select(tiled_video_name, metadata_id, label, first_frame_inclusive, last_frame_exclusive)\n",
     "\n",
     "# Inspect the returned instances.\n",
     "num_birds = 0\n",
+    "num_cols = 5\n",
+    "f, axs = plt.subplots(1, num_cols)\n",
+    "[ax.axis('off') for ax in axs.ravel()]\n",
     "while True:\n",
-    "    bird = untiled_selection.next()\n",
+    "    bird = tiled_selection.next()\n",
     "    if bird.is_empty():\n",
     "        break\n",
     "    w = bird.width()\n",
     "    h = bird.height()\n",
+    "    axs[num_birds].imshow(bird.numpy_array())\n",
     "    num_birds += 1\n",
-    "    plt.axis('off')\n",
-    "    plt.imshow(bird.numpy_array()); plt.show()\n",
     "print(f'Detected {num_birds} birds.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "racial-jefferson",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "\n",
+    "def time_selection(video_name, metadata_id, label, first_frame=None, last_frame=None):\n",
+    "    start = time.perf_counter()\n",
+    "    selection = t.select(video_name, metadata_id, label, first_frame, last_frame) \\\n",
+    "                        if first_frame is not None and last_frame is not None \\\n",
+    "                        else t.select(video_name, metadata_id, label)\n",
+    "    num_objs = 0\n",
+    "    while True:\n",
+    "        obj = selection.next()\n",
+    "        if obj.is_empty():\n",
+    "            break\n",
+    "        num_objs += 1\n",
+    "    end = time.perf_counter()\n",
+    "    return end - start, num_objs"
    ]
   },
   {
@@ -215,39 +249,19 @@
    "source": [
     "# Compare the time to retrieve all of the birds from the untiled video from the tiled video.\n",
     "# By not specifying first frame and last frame, TASM selects all instances of the object from the video.\n",
-    "import time\n",
+    "dur, num_birds = time_selection(untiled_video_name, metadata_id, label)\n",
+    "print(f'Retrieved {num_birds} birds in {dur}')\n",
     "\n",
-    "start = time.perf_counter()\n",
-    "untiled_selection = t.select(untiled_video_name, metadata_id, label)\n",
-    "num_birds = 0\n",
-    "while True:\n",
-    "    bird = untiled_selection.next()\n",
-    "    if bird.is_empty():\n",
-    "        break\n",
-    "    num_birds += 1\n",
-    "end = time.perf_counter()\n",
-    "print(f'Retrieved {num_birds} birds in {end - start}')"
+    "dur, num_birds = time_selection(tiled_video_name, metadata_id, label)\n",
+    "print(f'Retrieved {num_birds} birds in {dur}')"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "coupled-explosion",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "id": "later-differential",
+   "metadata": {},
    "source": [
-    "start = time.perf_counter()\n",
-    "tiled_selection = t.select(tiled_video_name, metadata_id, label)\n",
-    "num_birds = 0\n",
-    "while True:\n",
-    "    bird = tiled_selection.next()\n",
-    "    if bird.is_empty():\n",
-    "        break\n",
-    "    num_birds += 1\n",
-    "end = time.perf_counter()\n",
-    "print(f'Retrieved {num_birds} birds in {end - start}')"
+    "## <span style=\"color:blue\">Coming: retrieving full frames from a tiled video</span>"
    ]
   },
   {
@@ -256,6 +270,57 @@
    "metadata": {},
    "source": [
     "## Automatically tiling a video."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "assured-diploma",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Start with an untiled video.\n",
+    "t = tasm.TASM()\n",
+    "incrementally_tiled_name = 'birds-incremental'\n",
+    "t.store(VIDEO_PATH, incrementally_tiled_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "hourly-composite",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Perform 10 selections on the un-tiled video over the first 5 seconds.\n",
+    "first_frame_inclusive = 0\n",
+    "last_frame_exclusive = 150\n",
+    "num_selections = 10\n",
+    "start = time.perf_counter()\n",
+    "for i in range(num_selections):\n",
+    "    time_selection(incrementally_tiled_name, metadata_id, label, first_frame_inclusive, last_frame_exclusive)\n",
+    "print(f'{num_selections} selections over the untiled video took {time.perf_counter() - start}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "amazing-africa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# To automatically tile a video, we must first activate it so TASM will start tracking regret.\n",
+    "# Activate regret-based re-tiling.\n",
+    "t.activate_regret_based_tiling(incrementally_tiled_name, metadata_id)\n",
+    "\n",
+    "# Perform 0 selections with incremental tiling over the first 5 seconds.\n",
+    "# Currently, the call to re-tile must be manually specified.\n",
+    "# Moving this into the selection calls is tracked at https://github.com/maureendaum/TASM/issues/5.\n",
+    "start = time.perf_counter()\n",
+    "for i in range(num_selections):\n",
+    "    time_selection(incrementally_tiled_name, metadata_id, label, first_frame_inclusive, last_frame_exclusive)\n",
+    "    t.retile_based_on_regret(incrementally_tiled_name)\n",
+    "print(f'{num_selections} selections with incremental tiling took {time.perf_counter() - start}')"
    ]
   }
  ],
