Update notebook to show how to create an in-memory semantic index

--- a/python/Examples/Basics.ipynb
+++ b/python/Examples/Basics.ipynb
@@ -249,6 +249,8 @@
     "import os\n",
     "import tasm\n",
     "\n",
+    "# If we want to create a temporary semantic index, we can pass the in-memory option:\n",
+    "# t = tasm.TASM(tasm.IndexType.InMemory)\n",
     "t = tasm.TASM()\n",
     "\n",
     "# First, load the video without tiling into TASM.\n",
