Incorporate Enhao's comments

--- a/python/Examples/Basics.ipynb
+++ b/python/Examples/Basics.ipynb
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "dramatic-bolivia",
    "metadata": {
     "scrolled": true
@@ -236,12 +236,17 @@
    "id": "negative-skiing",
    "metadata": {},
    "source": [
-    "# Loading the video and detections into TASM."
+    "# Loading the video and detections into TASM.\n",
+    "\n",
+    "### The key parameters to TASM's API are:\n",
+    "- `video`: The name of the stored video (e.g., \"birds-untiled\" or \"birds-2x2\")\n",
+    "- `label`: The label associated with a bounding box in the semantic index (e.g., \"bird\")\n",
+    "- `metadata_id`: The metadata identifier associated with the labels and bounding boxes in the semantic index (e.g., \"birds\"). Multiple stored videos can use the same `metadata_id` (e.g., all of \"birds-untiled\", \"birds-2x2\", and \"birds-birds\" use the same `metadata_id` because the semantic content of all of these videos is the same)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "bronze-mason",
    "metadata": {},
    "outputs": [],
@@ -251,6 +256,8 @@
     "\n",
     "# If we want to create a temporary semantic index, we can pass the in-memory option:\n",
     "# t = tasm.TASM(tasm.IndexType.InMemory)\n",
+    "# Otherwise, the semantic index will be created as a persistent file the `default_db_path` specified in the call\n",
+    "# to `configure_environment`.\n",
     "t = tasm.TASM()\n",
     "\n",
     "# First, load the video without tiling into TASM.\n",
@@ -265,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "atlantic-departure",
    "metadata": {},
    "outputs": [],
@@ -284,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "selected-dollar",
    "metadata": {},
    "outputs": [],
@@ -308,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "raised-paper",
    "metadata": {
     "scrolled": true
@@ -358,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "racial-jefferson",
    "metadata": {},
    "outputs": [],
@@ -382,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "committed-mediterranean",
    "metadata": {},
    "outputs": [
@@ -390,13 +397,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Retrieved 1209 birds in 1.445235550403595\n",
-      "Retrieved 1209 birds in 0.2693198546767235\n"
+      "Untiled video: Retrieved 1209 birds in 1.4459983557462692\n",
+      "Tiled video: Retrieved 1209 birds in 0.2701883763074875\n"
      ]
     }
    ],
    "source": [
-    "# Compare the time to retrieve all of the birds from the untiled video from the tiled video.\n",
+    "# Compare the time to retrieve all of the birds from the untiled video to the tiled video.\n",
     "# By not specifying first frame and last frame, TASM selects all instances of the object from the video.\n",
     "dur, num_birds = time_selection(untiled_video_name, metadata_id, label)\n",
     "print(f'Untiled video: Retrieved {num_birds} birds in {dur}')\n",
@@ -424,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "rolled-gambling",
    "metadata": {},
    "outputs": [
@@ -474,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "declared-beginning",
    "metadata": {},
    "outputs": [
@@ -515,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "suspected-charity",
    "metadata": {},
    "outputs": [
@@ -556,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "incomplete-venture",
    "metadata": {},
    "outputs": [
@@ -605,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "assured-diploma",
    "metadata": {},
    "outputs": [],
@@ -618,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "hourly-composite",
    "metadata": {},
    "outputs": [
@@ -626,7 +633,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10 selections over the untiled video took 7.142789863049984\n"
+      "10 selections over the untiled video took 7.139370985329151\n"
      ]
     }
    ],
@@ -643,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "amazing-africa",
    "metadata": {},
    "outputs": [
@@ -651,7 +658,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10 selections with incremental tiling took 5.589081473648548\n"
+      "10 selections with incremental tiling took 5.585245057940483\n"
      ]
     }
    ],
@@ -660,7 +667,7 @@
     "# Activate regret-based re-tiling.\n",
     "t.activate_regret_based_tiling(incrementally_tiled_name, metadata_id)\n",
     "\n",
-    "# Perform 0 selections with incremental tiling over the first 5 seconds.\n",
+    "# Perform 10 selections with incremental tiling over the first 5 seconds.\n",
     "# Currently, the call to re-tile must be manually specified.\n",
     "# Moving this into the selection calls is tracked at https://github.com/maureendaum/TASM/issues/5.\n",
     "start = time.perf_counter()\n",
